# projct

./: Cargo.toml  README.md
.github/workflows/: build.yml
projct-cli/: Cargo.toml
projct-cli/src/: main.rs
projct-core/: Cargo.toml
projct-core/src/: config.rs  file_utils.rs  generator.rs  gitignore.rs  lib.rs
