[workspace]
members = ["projct-core", "projct-cli"]

[package]
name = "projct"
version = "0.1.0"
edition = "2021"

[dependencies]
projct-core = { path = "./projct-core" }
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
regex = "1.0"
walkdir = "2.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "projct"
path = "projct-cli/src/main.rs"
